Glyphicons can be used in the menu with the lable glyphicon: <name of icon> They can be found here http://getbootstrap.com/components/#glyphicons-glyphs

--- a/site.yaml
+++ b/site.yaml
@@ -25,13 +25,16 @@ context:
               - title: Starter Template
                 type: page
                 url: index.html
+                glyphicon: star
               - title: Dropdown
                 type: dropdown
+                glyphicon: time
                 sections:
                   - items:
                       - title: Jumbotron
                         type: page
                         url: jumbotron.html
+                        glyphicon: search
                       - title: herp
                         type: page
                         url: derp
